// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Line Chart/Radial CategoricalData smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="500"
     style="height: 500px; width: 500px;"
>
  <svg width="500"
       height="500"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(250, 250)">
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="0.1"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="14.674999999999999"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="29.249999999999996"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="43.825"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="58.4"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="72.97500000000001"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="87.55"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="102.12500000000001"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="116.69999999999999"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="131.275"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="145.85000000000002"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="160.42499999999998"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="175"
              style="pointer-events: none;"
      >
      </circle>
      <g transform="rotate(-90) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(90, 15, 0)">
          <title>
            DLP
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="middle"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            DLP
          </text>
        </g>
      </g>
      <g transform="rotate(0) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(0, 15, 0)">
          <title>
            Malware
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            Malware
          </text>
        </g>
      </g>
      <g transform="rotate(90) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-90, 15, 0)">
          <title>
            IDS
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="middle"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            IDS
          </text>
        </g>
      </g>
      <g transform="rotate(180) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-180, 15, 0)">
          <title>
            Phishing Attack
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            Phishing Attack
          </text>
        </g>
      </g>
      <g>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <g clip-path="url(#ref-3-path)">
          <path pointer-events="none"
                stroke="#2d60e8"
                fill="none"
                stroke-width="2"
                d="M151.554,0C151.554,35.207,54.426,123.744,0,123.744C-54.426,123.744,-175,35.207,-175,0C-175,-35.207,-54.426,-87.5,0,-87.5C54.426,-87.5,151.554,-35.207,151.554,0"
                opacity="1"
          >
          </path>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="DLP: 10"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-87.4545px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Malware: 30"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(151.472px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="IDS: 20"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(123.674px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Phishing Attack: 40"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-174.896px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Line Chart/Radial MultiSeries smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="500"
     style="height: 500px; width: 500px;"
>
  <svg width="500"
       height="500"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(250, 250)">
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="0.1"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="14.674999999999999"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="29.249999999999996"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="43.825"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="58.4"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="72.97500000000001"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="87.55"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="102.12500000000001"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="116.69999999999999"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="131.275"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="145.85000000000002"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="160.42499999999998"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="175"
              style="pointer-events: none;"
      >
      </circle>
      <g transform="rotate(-90) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(90, 15, 0)">
          <title>
            XML
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="middle"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            XML
          </text>
        </g>
      </g>
      <g transform="rotate(0) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(0, 15, 0)">
          <title>
            JSON
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            JSON
          </text>
        </g>
      </g>
      <g transform="rotate(90) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-90, 15, 0)">
          <title>
            HTTPS
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="middle"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            HTTPS
          </text>
        </g>
      </g>
      <g transform="rotate(180) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-180, 15, 0)">
          <title>
            SSH
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            SSH
          </text>
        </g>
      </g>
      <g>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <g clip-path="url(#ref-5-path)">
          <path pointer-events="none"
                stroke="#2aa1d1"
                fill="none"
                stroke-width="2"
                d="M72.154,0C72.154,30.297,33.754,58.041,0,58.041C-33.754,58.041,-130.372,30.297,-130.372,0C-130.372,-30.297,-33.754,-123.744,0,-123.744C33.754,-123.744,72.154,-30.297,72.154,0"
                opacity="1"
          >
          </path>
          <path pointer-events="none"
                stroke="#2b8dd8"
                fill="none"
                stroke-width="2"
                d="M141.09,0C141.09,38.886,45.632,129.783,0,129.783C-45.632,129.783,-132.7,38.886,-132.7,0C-132.7,-38.886,-45.632,-103.531,0,-103.531C45.632,-103.531,141.09,-38.886,141.09,0"
                opacity="1"
          >
          </path>
          <path pointer-events="none"
                stroke="#2c77e0"
                fill="none"
                stroke-width="2"
                d="M135.554,0C135.554,45.883,44.419,151.554,0,151.554C-44.419,151.554,-130.958,45.883,-130.958,0C-130.958,-45.883,-44.419,-123.744,0,-123.744C44.419,-123.744,135.554,-45.883,135.554,0"
                opacity="1"
          >
          </path>
          <path pointer-events="none"
                stroke="#2d60e8"
                fill="none"
                stroke-width="2"
                d="M135.554,0C135.554,52.682,48.68,175,0,175C-48.68,175,-156.525,52.682,-156.525,0C-156.525,-52.682,-48.68,-141.09,0,-141.09C48.68,-141.09,135.554,-52.682,135.554,0"
                opacity="1"
          >
          </path>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 100"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-123.678px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(72.1141px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 22"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(58.0075px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 111"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-130.292px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 70"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-103.476px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 130"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(141.012px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 110"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(129.708px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 115"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-132.619px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 100"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-123.678px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 120"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(135.479px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 150"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(151.466px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 112"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-130.878px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 130"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-141.015px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 120"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(135.479px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 200"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(174.898px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 160"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-156.429px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Line Chart/Radial Simple smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="500"
     style="height: 500px; width: 500px;"
>
  <svg width="500"
       height="500"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(250, 250)">
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="0.1"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="35.08"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="70.06"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="105.04"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="140.02"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="175"
              style="pointer-events: none;"
      >
      </circle>
      <g transform="rotate(-48.9795918367347) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(48.9795918367347, 15, 0)">
          <title>
            1/19/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            1/19/2020
          </text>
        </g>
      </g>
      <g transform="rotate(2.4489795918367463) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-2.4489795918367463, 15, 0)">
          <title>
            1/26/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            1/26/2020
          </text>
        </g>
      </g>
      <g transform="rotate(53.87755102040816) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-53.87755102040816, 15, 0)">
          <title>
            2/2/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/2/2020
          </text>
        </g>
      </g>
      <g transform="rotate(105.30612244897958) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-105.30612244897958, 15, 0)">
          <title>
            2/9/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/9/2020
          </text>
        </g>
      </g>
      <g transform="rotate(156.73469387755102) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-156.73469387755102, 15, 0)">
          <title>
            2/16/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/16/2020
          </text>
        </g>
      </g>
      <g transform="rotate(208.1632653061224) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-208.1632653061224, 15, 0)">
          <title>
            2/23/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/23/2020
          </text>
        </g>
      </g>
      <g transform="rotate(259.59183673469386) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-259.59183673469386, 15, 0)">
          <title>
            3/1/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            3/1/2020
          </text>
        </g>
      </g>
      <g>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <g clip-path="url(#ref-1-path)">
          <path pointer-events="none"
                stroke="#2d60e8"
                fill="none"
                stroke-width="2"
                d="M20.993,-162.817C24.617,-160.139,17.352,-90.569,21.746,-82.928C26.14,-75.287,38.02,-107.78,47.357,-116.972C56.693,-126.163,73.321,-141.044,77.764,-138.077C82.206,-135.11,72.915,-107.667,74.012,-99.17C75.11,-90.673,81.216,-91.29,84.347,-87.095C87.478,-82.901,88.868,-77.615,92.796,-74.003C96.724,-70.39,106.096,-70.101,107.914,-65.418C109.732,-60.736,99.323,-50.172,103.706,-45.908C108.089,-41.644,137.993,-45.302,134.214,-39.834C130.434,-34.366,79.716,-18.98,81.03,-13.1C82.344,-7.221,148.491,-7.426,142.098,-4.557C135.704,-1.687,55.711,0.928,42.668,4.116C29.625,7.304,60,11.227,63.837,14.57C67.675,17.914,65.361,20.88,65.693,24.176C66.024,27.471,67.825,32.127,65.827,34.342C63.829,36.556,55.515,34.866,53.704,37.462C51.893,40.057,45.007,33.951,54.963,49.916C64.919,65.881,112.792,126.504,113.44,133.253C114.088,140.002,65.358,86.872,58.851,90.411C52.343,93.949,79.17,154.391,74.396,154.484C69.621,154.577,37.493,90.477,30.204,90.968C22.914,91.46,34.271,150.427,30.66,157.432C27.049,164.438,15.32,133.207,8.539,133.002C1.758,132.797,-4.008,154.762,-10.029,156.203C-16.049,157.644,-26.658,159.852,-27.586,141.648C-28.514,123.443,-11.427,52.378,-15.597,46.976C-19.767,41.574,-52.955,113.609,-52.606,109.237C-52.256,104.864,-6.451,20.367,-13.501,20.742C-20.552,21.117,-81.591,100.804,-94.911,111.488C-108.23,122.171,-99.669,96.747,-93.419,84.841C-87.169,72.934,-52.952,43.738,-57.412,40.048C-61.873,36.358,-121.095,66.188,-120.182,62.699C-119.27,59.21,-60.591,26.966,-51.935,19.112C-43.279,11.259,-72.795,18.366,-68.245,15.576C-63.695,12.787,-11.273,5.766,-24.635,2.376C-37.996,-1.013,-132.162,-1.072,-148.416,-4.759C-164.67,-8.447,-123.836,-13.699,-122.158,-19.749C-120.479,-25.8,-134.26,-33.531,-138.344,-41.06C-142.428,-48.589,-147.976,-58.585,-146.663,-64.923C-145.349,-71.261,-139.44,-77.574,-130.462,-79.087C-121.484,-80.6,-105.466,-77.814,-92.796,-74.003C-80.127,-70.191,-60.044,-55.331,-54.446,-56.22C-48.848,-57.109,-57.963,-70.38,-59.21,-79.336C-60.457,-88.292,-61.41,-97.53,-61.926,-109.955C-62.441,-122.381,-66.089,-147.295,-62.302,-153.886C-58.515,-160.477,-46.336,-149.931,-39.204,-149.501C-32.072,-149.071,-26.043,-159.219,-19.509,-151.309C-12.975,-143.399,-3.252,-110.761,0,-102.042C3.252,-93.323,-3.499,-88.866,0,-98.995C3.499,-109.124,17.369,-165.495,20.993,-162.817"
                opacity="1"
          >
          </path>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-98.995px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 44"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(20.993px) translateY(-162.817px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 12"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(21.746px) translateY(-82.928px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(47.357px) translateY(-116.972px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 41"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(77.764px) translateY(-138.077px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(74.012px) translateY(-99.17px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(84.347px) translateY(-87.095px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(92.796px) translateY(-74.003px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(107.914px) translateY(-65.418px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 21"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(103.706px) translateY(-45.908px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 32"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(134.214px) translateY(-39.834px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 11"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(81.03px) translateY(-13.1px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 33"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(142.098px) translateY(-4.557px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 3"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(42.668px) translateY(4.116px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(63.837px) translateY(14.57px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(65.693px) translateY(24.176px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(65.827px) translateY(34.342px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 30 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(53.704px) translateY(37.462px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 31 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(54.963px) translateY(49.916px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 50"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(113.44px) translateY(133.253px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 19"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(58.851px) translateY(90.411px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 03 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 48"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(74.396px) translateY(154.484px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 04 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 15"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(30.204px) translateY(90.968px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 05 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(30.66px) translateY(157.432px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 06 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 29"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(8.539px) translateY(133.002px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 07 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 40"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-10.029px) translateY(156.203px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 08 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-27.586px) translateY(141.648px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 09 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 4"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.597px) translateY(46.976px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 10 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-52.606px) translateY(109.237px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 11 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-13.501px) translateY(20.742px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 12 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 35"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-94.911px) translateY(111.488px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-93.419px) translateY(84.841px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-57.412px) translateY(40.048px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 30"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-120.182px) translateY(62.699px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 5"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-51.935px) translateY(19.112px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-68.245px) translateY(15.576px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-24.635px) translateY(2.376px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 36"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-148.402px) translateY(-4.759px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-122.146px) translateY(-19.749px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-138.33px) translateY(-41.06px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-146.647px) translateY(-64.923px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-130.447px) translateY(-79.087px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-92.7848px) translateY(-74.003px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 10"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-54.446px) translateY(-56.22px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-59.21px) translateY(-79.3255px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-61.926px) translateY(-109.94px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 45"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-62.302px) translateY(-153.864px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 39"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-39.204px) translateY(-149.478px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Mar 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-19.509px) translateY(-151.285px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Mar 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 17"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-102.025px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;
